# odefit-template

./: pyproject.toml
.cursor/rules/: uv.mdc
examples/: README.md  bioprocess_example.py  one_state_example.py  two_state_example.py
specifications/: gemini-chat.md  gemini-doc.md  strategy.md
src/odefit_template/: __init__.py  core.py  parameters.py
